--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stripe/stripe-js": "^2.4.0",
     "@uploadthing/react": "^6.5.1",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.314.0",
     "micro": "^10.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "pdf-lib": "^1.17.1",
     "query-string": "^8.1.0",
     "react": "^18",
@@ -41,13 +43,16 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
