--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.30.1",
     "@hookform/resolvers": "^3.3.4",
+    "@niyari/base32-ts": "^0.0.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -24,6 +25,7 @@
     "@stripe/stripe-js": "^2.4.0",
     "@uploadthing/react": "^6.5.1",
     "axios": "^1.6.8",
+    "base32": "^0.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
