--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
-    "lucide-react": "^0.314.0",
+    "lucide-react": "^0.365.0",
     "micro": "^10.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "^14.2.3",
     "pdf-lib": "^1.17.1",
     "query-string": "^8.1.0",
+    "razorpay": "^2.9.3",
     "react": "^18",
     "react-datepicker": "^5.0.0",
     "react-dom": "^18",
