--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "axios": "^1.6.8",
     "base32": "^0.0.7",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "framer-motion": "^11.3.12",
     "lucide-react": "^0.365.0",
     "micro": "^10.0.1",
+    "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "^14.2.3",
@@ -43,7 +45,7 @@
     "react-hook-form": "^7.49.3",
     "stripe": "^14.15.0",
     "svix": "^1.23.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.1",
     "uuid": "^9.0.1",
